# coarse_to_fine_image_registration

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  SuperGlueMatcherApp.cpp  SuperGlueMatcherMicasenseApp.cpp  SuperGlueMatcherTwoRGBs.cpp
include/image_registration/: ImageRegistrationHandler.hpp  SuperGlueMatcher.hpp  Types.hpp  Utils.hpp  image_registration.hpp
src/: CMakeLists.txt  ImageRegistrationHandler.cpp  SuperGlueMatcher.cpp  Types.cpp  image_registration.cpp
tests/: CMakeLists.txt  HttpDownloader.cpp  HttpDownloader.hpp  TestSuperGlueMatcher.cpp
